fix content overflow and scolling issue in style.css file

--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@
     text-transform:capitalize;
 }
 body{
-    /* border:5px groove grey; */
-    overflow: hidden;
+    width:100%;
+}
+html,body{
+    overflow-x: hidden;
 }
 header{
     background-color: #152457;
     display: block;
     width:100%;
+    max-width:100%;
     height:auto;
     /* margin:0 auto; */
     /* overflow: hidden; */
@@ -47,19 +50,16 @@ header input{
 nav{
     background-color: #23222e;
 }
-.categories{
+.categories {
     display: flex;
-    flex-direction: rows;
-    width:100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
-.categories div{
-    color:white;
-    padding:1vh 1.3vw;
-    font-size:1em;
-}
-#last{
-    padding-left:25vw;
-}
+
+
 .banner{
     width:100%;
     height:auto;
@@ -72,8 +72,8 @@ nav{
 .layout{
     width:100%;
     height:auto;
-    margin:1vh auto;
-    box-shadow:0 0 10px grey;
+    margin:1vh 0;
+    /* box-shadow:0 0 10px grey; */
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-auto-rows: auto auto;
@@ -82,8 +82,8 @@ nav{
     /* background-color: #6be4e4; */
 }
 .box{
-    margin-left:1vw;
-    box-shadow:0 0 10px grey;
+    /* margin-left:1vw; */
+    /* box-shadow:0 0 10px grey; */
     display: grid;
     grid-template-columns: repeat(2,1fr);
     /* grid-template-rows: 50px 150px 150px; */
@@ -111,7 +111,7 @@ nav{
 .container{
     width:100%;
     height:auto;
-    margin:2vh auto;
+    margin:2vh 0;
 }
 .scroll{
     display: grid;
@@ -187,8 +187,8 @@ nav{
     .layout{
     width:100%;
     height:auto;
-    margin:1% auto;
-    box-shadow:0 0 10px grey;
+    margin:1% 0;
+    /* box-shadow:0 0 10px grey; */
     display: grid;
     grid-template-columns: repeat(1,1fr);
     grid-auto-rows: auto auto;
